--- a/type.html
+++ b/type.html
@@ -17,7 +17,7 @@
   Write it on your heart <br> that every day <br>is the best day in   the year
   </b>
     <p> hello world</p>
-    <p> this is edit in git hub account</p>
+    <p> this is edit in git hub Account</p>
   </td>
 </tr>
 
